--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@solana/web3.js": "^1.95.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "html-to-image": "^1.11.11",
     "lucide-react": "^0.441.0",
     "next": "14.2.11",
     "react": "^18",
